src/objects/OrgUsersLicense__c.object
<CustomObject>
    <fields>
        <fullName>ActiveUser__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationID__c</fullName>
        <label>Federation ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseRank__c</fullName>
        <formula>CASE( UserLicense__c , &apos;Chatter Free&apos;, 0, &apos;Salesforce Platform&apos;, 1, &apos;Salesforce&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfficeStaffOffice__c</fullName>
        <label>Office/Staff Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgFedIDKey__c</fullName>
        <externalId>true</externalId>
        <label>OrgFedIDKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <label>Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>Org. Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLicense__c</fullName>
        <label>User License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org. User  License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrgID__c</columns>
        <columns>OrgName__c</columns>
        <columns>FederationID__c</columns>
        <columns>UserID__c</columns>
        <columns>OfficeStaffOffice__c</columns>
        <columns>UserLicense__c</columns>
        <columns>LicenseRank__c</columns>
        <columns>MaxLicense__c</columns>
        <columns>ActiveUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Org. User License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org. Users License</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>